Fixes issue in Firefox where a small gap can appear at the bottom of the button

--- a/css/zocial.css
+++ b/css/zocial.css
@@ -56,7 +56,7 @@ Enjoy
 	line-height: 1.65;
 	font-style: normal !important;
 	font-weight: normal !important;
-	margin: 0.15em 0.5em 0 0;
+	margin: 0.1em 0.5em 0 0;
 	padding: 0 0.5em;
 	text-align: center !important;
 	text-decoration: none !important;
